# Flova

./: .env.example  .gitignore  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
apps/api/: .dockerignore  .env.example  CONTEXT.md  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
apps/api/alembic/: README.md  env.py  script.py.mako
apps/api/alembic/versions/: 20260605_2150_initial_schema.py  20260606_1054_add_render_jobs_external_job_id.py  20260606_1136_add_projects_table.py  20260606_1202_add_subscriptions_table.py  20260606_2008_add_studio_presets.py  20260606_2119_render_jobs_add_is_public.py  20260607_0812_add_teams_and_team_members.py  20260607_0908_studio_presets_add_is_public.py  20260607_0918_add_training_jobs.py
apps/api/src/flova_api/: app.py  billing.py  db.py  models.py  ratelimit.py  schemas.py  security.py  settings.py  storage.py  video.py  worker.py
apps/api/src/flova_api/routers/: auth.py  billing.py  community.py  files.py  presets.py  projects.py  render.py  teams.py  training.py  users.py
apps/api/tests/: conftest.py  test_auth.py  test_billing.py  test_community.py  test_files.py  test_health.py  test_marketplace.py  test_presets.py  test_projects.py  test_rate_limit.py  test_render.py  test_teams.py  test_training.py  test_users.py  test_video.py
apps/web/: .dockerignore  .env.local.example  CONTEXT.md  Dockerfile  next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts  (+1 more)
deploy/: DEPLOY.md  SELF_HOSTED_MODEL.md  nginx.conf
(+173 files in other folders)
